feat: Add helmfile aware pipeline

--- a/.sub.gitlab-ci.yml.j2
+++ b/.sub.gitlab-ci.yml.j2
@@ -32,7 +32,10 @@ stages:
     - |
         helmfile {{ helmfile_command }} \
           --selector name={{ release.name }} \
-          --skip-needs
+{%- if helmfile_command == "diff" %}
+          --detailed-exitcode \
+{%- endif %}
+          --skip-needs 
 
 {%- endfor %}
 {%- endfor %}
